welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:6: error: not found: value ac
    if ((a<b) && (ac)) {return true}
                  ^